<resources>
    <string name="app_name">TicTacToe</string>
    <string name="ng1">New Game (One Player)</string>
    <string name="ng2">New Game (Two Players)</string>
    <string name="settings">Settings</string>
    <string name="info">Information</string>
    <string name="quit">Quit</string>
    <string name="qmes">Are you sure to quit?</string>
    <string name="move">move</string>
    <string name="hint1">Player One</string>
    <string name="hint2">Player Two</string>
    <string name="draw">Draw!</string>
    <string name="drawx">Drawn game!</string>
    <string name="win">won the round!</string>
    <string name="winx">won the game!</string>
    <string name="turn">First turn</string>
    <string name="turnsum">Set player for first turn</string>
    <string name="marker">Marker</string>
    <string name="markersum">Set marker for first player</string>
    <string name="games">Rounds</string>
    <string name="gamessum">Set number of rounds for one game</string>
    <string name="p1">Player1</string>
    <string name="p1sum">Set the name for player one</string>
    <string name="p2">Player2</string>
    <string name="p2sum">Set the name for player two</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="ng">New Game</string>
    <string name="go">Finish</string>
    <string name="name1">Name:</string>
    <string name="name2">TicTacToe</string>
    <string name="version1">Version:</string>
    <string name="version2">1.01</string>
    <string name="author1">Author:</string>
    <string name="author2">Rafal K...</string>
    <string name="contact1">email:</string>
    <string name="contact2">...</string>
    <string-array name="turn">
        <item>Human</item>
        <item>CPU</item>
    </string-array>
    <string-array name="marker">
        <item>X</item>
        <item>O</item>
    </string-array>
    <string-array name="games">
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>&#8734;</item>
    </string-array>
</resources>
